test/files/neg/extra-predef-no-predef.check
C_2.scala:4: error: not found: value println
  println("fail")
  ^
one error found
